# 10dpy

./: README.md  design.zh.md
plover-10dpy/: 10dpy_dict.py  overwrite.json  plover10dpy.py  setup.cfg
