[metadata]
name = plover-10dpy
version = 0.0.1
author = Etaoin Wu
description = 10 Digit Pinyin for Plover
long_description = 10dpy is an phono-coding scheme of Standard Mandarin Chinese. It uses 10 bits (binary digits) to encode a Standard Chinese syllable.
url = https://github.com/EtaoinWu/10dpy
keywords = plover plover_plugin

[options]
zip_safe = False
setup_requires =
  setuptools>=30.3.0
install_requires =
  regex>=2021.0.0
  plover>=4.0.0.dev11
  plover_python_dictionary>=1.0.0

py_modules =
  plover10dpy

package_data =
  10dpy_dict.py
  overwrite.json

include_package_data = False


[options.entry_points]
plover.system =
  TenDigitPinyin = plover10dpy
